WebHelpers ChangeLog
====================

tip (development version)
-------------------------
* webhelpers.misc:

  - New helper ``subclasses_only`` to extract the subclasses of an abstract
    base class from a module or iterable.

* webhelpers.pylonslib.grid:

  - Bugfixes.

1.0b3 (2009-12-29)
------------------
* webhelpers.feedgenerator:

  - Allow either lat-lon and lon-lat formats in geometry data. The default is
    lat-lon. For lon-lat, set ``GeoFeedMixin.is_input_latitude_first`` to 
    false. (You can set in a subclass or instance before writing the output.)
    lat-lon is the most common format but GeoDjango and some other libraries
    use lon-lat. The XML output is always lat-lon per the GeoRSS spec.

* webhelpers.html.grid:

  - New module to create an HTML table from a list of records.

* webhelpers.html.tags:

  - New helpers ``Doctype`` (class) and ``xml_declaration``.

  - Python 2.5 compatibility fix by Yuen Ho Wong. (#20)

* webhelpers.html.tools:

  - New helper ``js_obfuscate`` implements the old rails helpers.

* webhelpers.util:

- New helper ``update_params`` to update query parameters in a URL.

1.0b2 (2009-12-21)
------------------
* webhelpers.constants:

  - Fix spelling of Massachusetts.

* webhelpers.feedgenerator:

  - Sync with Django rev 11910. This adds GeoRSS and makes the API more
    extensible, as well as fixing a few bugs.
    (Re-added the Atom1 'published' property.)
    (The 'generator' and 'source' properties were lost, but they weren't
    working correctly anyway.)

    GeoRSS usage: use the Geo\* classes and add  ``geometry=(lat, lon)`` to
    each news item. Other shapes and a (not yet implemented) Geometry class are
    allowed; see the source.

* webhelpers.html:

  - New ``HTML.cdata()`` method for producing "<!![CDATA[ ... ]]>" sections.
  - The basic tag builders (``HTML.a()`` and ``HTML.tag("a")``) now have a
    ``_nl`` arg which, if true, inserts a newline between content elements